添加checkstyle, 统一代码规范