@@ -3,14 +3,13 @@ package net.arver.commerce.util;
 import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.Jws;
 import io.jsonwebtoken.Jwts;
-import net.arver.commerce.constant.CommonConstant;
-import net.arver.commerce.vo.LoginUserInfo;
-import sun.misc.BASE64Decoder;
-
 import java.security.KeyFactory;
 import java.security.PublicKey;
 import java.security.spec.X509EncodedKeySpec;
+import java.util.Base64;
 import java.util.Calendar;
+import net.arver.commerce.constant.CommonConstant;
+import net.arver.commerce.vo.LoginUserInfo;
 
 /**
  * JWT Token 解析工具类.
@@ -19,13 +18,18 @@ import java.util.Calendar;
  * @version 1.0.0.0
  * Description:
  **/
-public class TokenUtil {
+public final class TokenUtil {
+
+    /**
+     * 构造函数.
+     */
+    private TokenUtil() {}
 
     /**
      * 从 JWT Token 中解析 LoginUserInfo 对象.
-     * @param token
-     * @return
-     * @throws Exception
+     * @param token token
+     * @return 用户信息
+     * @throws Exception 异常
      */
     public static LoginUserInfo parseUserInfoFromToken(final String token) throws Exception {
         if (token == null) {
@@ -46,9 +50,9 @@ public class TokenUtil {
 
     /**
      * 通过公钥去解析 JWT Token.
-     * @param token
-     * @param publicKey
-     * @return
+     * @param token token
+     * @param publicKey publicKey
+     * @return jwt 属性
      */
     private static Jws<Claims> parseToken(final String token, final PublicKey publicKey) {
         return Jwts.parserBuilder().setSigningKey(publicKey).build().parseClaimsJws(token);
@@ -56,12 +60,11 @@ public class TokenUtil {
 
     /**
      * 根据本地存储的公钥获取 PublicKey 对象.
-     * @return
-     * @throws Exception
+     * @return 公钥
+     * @throws Exception 异常
      */
     private static PublicKey getPublicKey() throws Exception {
-        final X509EncodedKeySpec keySpec = new X509EncodedKeySpec(
-                new BASE64Decoder().decodeBuffer(CommonConstant.PUBLIC_KEY));
+        final X509EncodedKeySpec keySpec = new X509EncodedKeySpec(Base64.getDecoder().decode(CommonConstant.PUBLIC_KEY));
         return KeyFactory.getInstance("RSA").generatePublic(keySpec);
     }
 
